--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 inputs/malaria_dataset/cell_images/test
 inputs/malaria_dataset/cell_images/train
 inputs/malaria_dataset/cell_images/validation
+inputs/
 kaggle.json
 *.ipynb
 __pycache__/
+
 
